--- a/templates/principal.html
+++ b/templates/principal.html
@@ -9,14 +9,13 @@
 
 <form action="/autenticar" method="POST">
         <label>Nome:</label>
-        <input type="text" name="nomeUsuario" required>
+        <input type="text" name="nomeUsuario" required><br>
         <label>Senha:</label>
-        <input type="password" name="senhaUsuario" required>
+        <input type="password" name="senhaUsuario" required><br>
 
-        <button type="submit">Logar</button>
+        <button type="submit">Acesse Já</button>
     </form>
 
 
-    <a href="/cadastrar">Cadastre-se</a>
 </body>
 </html>
