commit resolver aluno

--- a/templates/principal.html
+++ b/templates/principal.html
@@ -8,14 +8,15 @@
     <h1>Plataforma de Quiz Online</h1>
 
 <form action="/autenticar" method="POST">
-        <label>Nome:</label>
-        <input type="text" name="nomeUsuario" required><br>
+        <label>Login:</label>
+        <input type="text" name="loginUsuario" required><br>
         <label>Senha:</label>
         <input type="password" name="senhaUsuario" required><br>
-
         <button type="submit">Acesse Já</button>
     </form>
 
+<h3>Você professor já possui uma conta? Crie já</h3>
+<a href="cadastrar.html">Cadastre-se já!</a>
 
 </body>
 </html>
