--- a/templates/professor.html
+++ b/templates/professor.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Crie O Teste De Quiz</h1>
+    <h1>Crie O Teste Quiz</h1>
+
+
+
+
+<a href="montar_quiz.html">Monte um Quiz de forma rápida</a>
 </body>
 </html>
