--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Aréa Administradora</h1>
+
+
+
+
+<a href="/">Voltar</a>
 </body>
 </html>
