--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -16,7 +16,7 @@
     <label>Senha:</label>
     <input type="password" name="senhaUsuario" required><br>
     <label>Email:</label>
-    <input type="text" name="setorUsuario" required><br>
+    <input type="text" name="emailUsuario" required><br>
 
 
 
