--- a/templates/aluno_resultado.html
+++ b/templates/aluno_resultado.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Testes de Quiz Disponíveis</h1>
-    
+    <h1>Resultado do seu Quiz</h1>
 </body>
 </html>
