--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Plataforma de Quiz Online</h1>
+    <h1>QuizRush, A Melhor Plataforma De Quiz Online</h1>
 
 <form action="/autenticar" method="POST">
         <label>Login:</label>
@@ -15,7 +15,7 @@
         <button type="submit">Acesse Já</button>
     </form>
 
-<h3>Você professor já possui uma conta? Crie já</h3>
+<h3>Você já possui uma conta no QuizRush? Crie já</h3>
 <a href="cadastrar.html">Cadastre-se já!</a>
 
 </body>
