--- a/templates/professor_temas.html
+++ b/templates/professor_temas.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Aréa de Testes do QuizRush</h1>
+
+    <h3>Liste temas</h3>
 </body>
 </html>
