--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cerencio Os seus Testes Quizzes</h1>
+    <h1>Aréa Administradora</h1>
 
 
 
-
-<a href="montar_quiz.html">Monte um Quiz de forma rápida</a>
+<a href="admin_usuario.html">Gerencia Usuários</a>
+<a href="admin_turmas.html">Gerencia Turmas</a>
+<a href="/">Voltar para página Principal</a>
 </body>
 </html>
