--- a/templates/admin_usuarios.html
+++ b/templates/admin_usuarios.html
@@ -10,7 +10,7 @@
 <h1>Aréa Administradora de Usuários</h1>
 
 <h3>Criar Usuário</h3>
-<form action="/cadastrar" method="POST">
+<form action="/admin_usuario" method="POST">
     <label>Nome:</label>
     <input type="text" name="nomeUsuario" required><br>
     <label>Login:</label>
