--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>QuizRush, A Melhor Plataforma De Quiz Online</h1>
+    <h1>QuizRush. A Melhor Plataforma De Quiz Online</h1>
 
 <form action="/autenticar" method="POST">
         <label>Login:</label>
