--- a/templates/professor.html
+++ b/templates/professor.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aréa Administradora</h1>
+    <h1>Cerencio Os seus Testes Quizzes</h1>
 
 
 
 
-<a href="/">Voltar</a>
+<a href="professor_criar_teste.html">Monte um Quiz de forma rápida</a>
 </body>
 </html>
