--- a/templates/aluno.html
+++ b/templates/aluno.html
@@ -10,5 +10,9 @@
     
 
     <h3>Lista de Testes Disponíveis</h3>
+
+<a href="{{ url_for('aluno_teste') }}">Teste o seu conhecimento</a><br>
+
+<a href="principal.html">Volte para Página Principal</a>
 </body>
 </html>
