--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,18 +5,18 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>QuizRush. A Melhor Plataforma De Quiz Online</h1>
+    <h1>QuizRush A Melhor Plataforma De Quiz Online</h1>
 
+<h3>Faça Já O Seu Login</h3>
 <form action="/autenticar" method="POST">
         <label>Login:</label>
         <input type="text" name="loginUsuario" required><br>
         <label>Senha:</label>
         <input type="password" name="senhaUsuario" required><br>
-        <button type="submit">Acesse Já</button>
+        <button type="submit">Logar</button>
     </form>
 
-<h3>Você já possui uma conta no QuizRush? Crie já</h3>
-<a href="cadastrar.html">Cadastre-se já!</a>
+
 
 </body>
 </html>
