--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,9 +9,10 @@
     <h1>Aréa Administradora</h1>
 
 
+<a href="{{ url_for('admin_usuario') }}">Gerenciar Usuários</a><br>
 
-<a href="admin_usuario.html">Gerencia Usuários</a>
-<a href="admin_turmas.html">Gerencia Turmas</a>
+<a href="{{ url_for('admin_turmas') }}">Gerenciar Turmas</a><br>
+
 <a href="/">Voltar para página Principal</a>
 </body>
 </html>
