--- a/templates/admin_turmas.html
+++ b/templates/admin_turmas.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Administrar Turmas, Associar Alunos e Professores</h1>
+    <h1>Administrar Turmas, Associe Alunos e Professores</h1>
 </body>
 </html>
