--- a/templates/admin_usuarios.html
+++ b/templates/admin_usuarios.html
@@ -9,7 +9,8 @@
 
 <h1>Aréa Administradora de Usuários</h1>
 
-<h3>Criar Usuário</h3>
+
+<h3>Criar Novo Usuário</h3>
 <form action="/admin_usuario" method="POST">
     <label>Nome:</label>
     <input type="text" name="nomeUsuario" required><br>
@@ -29,8 +30,8 @@
     <label>Email:</label>
     <input type="text" name="emailUsuario" required><br>
     <button type="submit">Remover Usuário</button>
-</form>
+</form><br>
 
-
+<a href="{{ url_for('area_admin') }}">Aréa Admin</a><br>
 </body>
 </html>
