--- a/templates/professor_criar_teste.html
+++ b/templates/professor_criar_teste.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Crie Testes Para os Seus Alunos No QuizRush</h1>
+
+<a href="{{ url_for('area_professor') }}">Aréa Professor</a>
 </body>
 </html>
