--- a/templates/professor_resultados.html
+++ b/templates/professor_resultados.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Resultados Dos Alunos(as)</h1>
+    <h1>Resultados Dos Alunos</h1>
+
+<a href="{{ url_for('area_professor') }}">Aréa Professor</a><br>
 </body>
 </html>
