commit unir alunoteste com flask e poo

--- a/templates/aluno_teste.html
+++ b/templates/aluno_teste.html
@@ -7,5 +7,50 @@
 </head>
 <body>
     <h1>QuizRush Teste seu Conheciomento</h1>
+
+<fieldset>
+            <legend>Qual foi O Jogo Goty de 2025?</legend>
+            
+            <label for="q1a">
+                <input type="radio" id="q1a" name="pergunta1" value="clair-obscur"> Clair Obscur: Expedition 33
+            </label><br>
+            
+            <label for="q1b">
+                <input type="radio" id="q1b" name="pergunta1" value="death-stranding"> Death Stranding 2
+            </label><br>
+            
+            <label for="q1c">
+                <input type="radio" id="q1c" name="pergunta1" value="donkey-kong-bananza"> Donkey Kong Bananza
+            </label><br>
+
+            <label for="q1d">
+                <input type="radio" id="q1d" name="pergunta1" value="hollow-knight-silksong"> Hollow Knight: Silksong
+            </label>
+
+        </fieldset>
+
+
+        <fieldset>
+            <legend>Qual foi o jogo Indie de 2025?</legend>
+            
+            <label for="q2a">
+                <input type="radio" id="q2a" name="pergunta2" value="clair-obscur"> Clair Obscur: Expedition 33
+            </label><br>
+            
+            <label for="q2b">
+                <input type="radio" id="q2b" name="pergunta2" value="hollow-knight-silksong"> Hollow Knight: Silksong
+            </label><br>
+            
+            <label for="q2c">
+                <input type="radio" id="q2c" name="pergunta2" value="absolum"> Absolum
+            </label><br>
+
+            <label for="q2c">
+                <input type="radio" id="q2d" name="pergunta2" value="ball-x-pit"> Ball x Pit
+            </label>
+        </fieldset><br>
+
+        <button type="submit">Enviar Respostas</button>
+    </form>
 </body>
 </html>
