--- a/templates/professor_criar_questao.html
+++ b/templates/professor_criar_questao.html
@@ -9,6 +9,6 @@
     <h1>Criar Questões</h1>
 
 
-<a href="{{ url_for('area_professor') }}">Aréa Professor</a>
+<a href="{{ url_for('area_professor') }}">Area Professor</a>
 </body>
 </html>
