--- a/templates/aluno.html
+++ b/templates/aluno.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bem Vindo(a), Aréa Aluno</h1>
+    <h1>Bem Vindo(a), Área Aluno</h1>
     
 
-    <h3>Lista de Testes Disponíveis</h3>
 
 <a href="{{ url_for('aluno_teste') }}">Teste o seu conhecimento</a><br>
 
-<a href="principal.html">Volte para Página Principal</a>
+<a href="/">Volte para Página Principal</a>
+
 </body>
 </html>
