--- a/templates/aluno_resultado.html
+++ b/templates/aluno_resultado.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Resultado do seu Quiz</h1>
-<a href="{{ url_for('area_aluno') }}">Aréa Aluno</a><br>
 
+    
+<a href="{{ url_for('area_aluno') }}">Area Aluno</a><br>
+<a href="/">Voltar para página Principal</a><br>
+<a href="{{ url_for('/') }}">URL principal</a><br>
 </body>
 </html>
