--- a/templates/professor_criar_teste.html
+++ b/templates/professor_criar_teste.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Crie Testes Para os Seus Alunos No QuizRush</h1>
 
-<a href="{{ url_for('area_professor') }}">Aréa Professor</a>
+<a href="{{ url_for('area_professor') }}">Area Professor</a>
 </body>
 </html>
