--- a/templates/professor_resultados.html
+++ b/templates/professor_resultados.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Resultados Dos Alunos</h1>
 
-<a href="{{ url_for('area_professor') }}">Aréa Professor</a><br>
+<a href="{{ url_for('area_professor') }}">Area Professor</a><br>
 </body>
 </html>
