--- a/templates/professor_temas.html
+++ b/templates/professor_temas.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Defina Temas do seu QuizRush</h1>
 
-
+<a href="{{ url_for('area_professor') }}">Area Professor</a><br>
 </body>
 </html>
