--- a/templates/aluno_teste.html
+++ b/templates/aluno_teste.html
@@ -9,6 +9,7 @@
     <h1>QuizRush Teste seu Conheciomento</h1>
 
 <fieldset>
+    <form action="aluno_quiz">
             <legend>Qual foi O Jogo Goty de 2025?</legend>
             
             <label for="q1a">
