commit resultado aluno e criar questao professor

--- a/templates/admin_turmas.html
+++ b/templates/admin_turmas.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Administrar Turmas, Associe Alunos e Professores</h1>
+    <h1>Administrador - Gestão de Turmas</h1>
+
+<a href="{{ url_for('area_admin') }}">Aréa Admin</a><br>
 </body>
 </html>
