--- a/templates/aluno_teste_jogo.html
+++ b/templates/aluno_teste_jogo.html
@@ -46,8 +46,47 @@
                 <input type="radio" id="q2c" name="pergunta2" value="absolum"> Absolum
             </label><br>
 
-            <label for="q2c">
+            <label for="q2d">
                 <input type="radio" id="q2d" name="pergunta2" value="ball-x-pit"> Ball x Pit
+            </label>
+        </fieldset><br>
+
+        <fieldset>
+            <legend>Qual foi o jogo com Melhor Narrativa de 2025?</legend>
+            
+            <label for="q3a">
+                <input type="radio" id="q3a" name="pergunta3" value="clair-obscur"> Clair Obscur: Expedition 33
+            </label><br>
+            
+            <label for="q3b">"> 
+            </label><br>
+            
+            <label for="q3c">
+                <input type="radio" id="q3c" name="pergunta3" value=""> 
+            </label><br>
+
+            <label for="q3d">
+                <input type="radio" id="q3d" name="pergunta3" value=""> 
+            </label>
+        </fieldset><br>
+
+        <fieldset>
+            <legend>Qual foi o jogo com Melhor Design de 2025?</legend>
+            
+            <label for="q4a">
+                <input type="radio" id="q4a" name="pergunta4" value="clair-obscur"> Clair Obscur: Expedition 33
+            </label><br>
+            
+            <label for="q4b">
+                <input type="radio" id="q4b" name="pergunta4" value="hollow-knight-silksong"> Hollow Knight: Silksong
+            </label><br>
+            
+            <label for="q4c">
+                <input type="radio" id="q4c" name="pergunta4" value="">
+            </label><br>
+
+            <label for="q4d">
+                <input type="radio" id="q2d" name="pergunta4" value=""> 
             </label>
         </fieldset><br>
 
