--- a/templates/aluno.html
+++ b/templates/aluno.html
@@ -10,7 +10,8 @@
     
 
 
-<a href="{{ url_for('aluno_teste') }}">Teste o seu conhecimento</a><br>
+<a href="{{ url_for('aluno_teste_jogo') }}">Teste o seu conhecimento na área dos Games</a><br>
+<a href="{{ url_for('aluno_teste_geral') }}">Teste o seu conhecimento Geral</a><br>
 
 <a href="/">Volte para Página Principal</a>
 
