--- a/templates/aluno_teste_jogo.html
+++ b/templates/aluno_teste_jogo.html
@@ -9,7 +9,7 @@
     <h1>QuizRush Teste seu Conheciomento</h1>
 
 <fieldset>
-    <form action="aluno_quiz">
+    <form action="/teste_quiz/jogo" method="post">
             <legend>Qual foi O Jogo Goty de 2025?</legend>
             
             <label for="q1a">
@@ -35,11 +35,11 @@
             <legend>Qual foi o jogo Indie de 2025?</legend>
             
             <label for="q2a">
-                <input type="radio" id="q2a" name="pergunta2" value="clair-obscur"> Clair Obscur: Expedition 33
+                <input type="radio" id="q2a" name="pergunta2" value="hollow-knight-silksong">Hollow Knight: Silksong
             </label><br>
             
             <label for="q2b">
-                <input type="radio" id="q2b" name="pergunta2" value="hollow-knight-silksong"> Hollow Knight: Silksong
+                <input type="radio" id="q2b" name="pergunta2" value="clair-obscur">  Clair Obscur: Expedition 33
             </label><br>
             
             <label for="q2c">
@@ -52,29 +52,30 @@
         </fieldset><br>
 
         <fieldset>
-            <legend>Qual foi o jogo com Melhor Narrativa de 2025?</legend>
+            <legend>Qual foi o Jogo com Melhor Direção de Arte de 2025?</legend>
             
             <label for="q3a">
-                <input type="radio" id="q3a" name="pergunta3" value="clair-obscur"> Clair Obscur: Expedition 33
+                <input type="radio" id="q3a" name="pergunta3" value="hollow-knight-silksong"> Hollow Knight: Silksong
             </label><br>
             
-            <label for="q3b">"> 
+            <label for="q3b">
+                <input type="radio" id="q3b" name="pergunta3" value="hades-ii"> Hades II
             </label><br>
             
             <label for="q3c">
-                <input type="radio" id="q3c" name="pergunta3" value=""> 
+                <input type="radio" id="q3c" name="pergunta3" value="ghost-yotei"> Ghost of Yōtei
             </label><br>
 
             <label for="q3d">
-                <input type="radio" id="q3d" name="pergunta3" value=""> 
+                <input type="radio" id="q3d" name="pergunta3" value="clair-obscur"> Clair Obscur: Expedition 33
             </label>
         </fieldset><br>
 
         <fieldset>
-            <legend>Qual foi o jogo com Melhor Design de 2025?</legend>
+            <legend>Qual foi o jogo com Melhor Ação/Aventura 2025?</legend>
             
             <label for="q4a">
-                <input type="radio" id="q4a" name="pergunta4" value="clair-obscur"> Clair Obscur: Expedition 33
+                <input type="radio" id="q4a" name="pergunta4" value="indiana-jones"> Indiana Jones and the Great Circle
             </label><br>
             
             <label for="q4b">
@@ -82,11 +83,11 @@
             </label><br>
             
             <label for="q4c">
-                <input type="radio" id="q4c" name="pergunta4" value="">
+                <input type="radio" id="q4c" name="pergunta4" value="split-fiction"> Split Fiction
             </label><br>
 
             <label for="q4d">
-                <input type="radio" id="q2d" name="pergunta4" value=""> 
+                <input type="radio" id="q2d" name="pergunta4" value="death-stranding">  Death Stranding 2: On the Beach
             </label>
         </fieldset><br>
 
