--- a/templates/aluno_teste_geral.html
+++ b/templates/aluno_teste_geral.html
@@ -9,7 +9,7 @@
     <h1>QuizRush Teste seu Conheciomento</h1>
 
 <fieldset>
-    <form action="aluno_quiz">
+    <form action="alquiz_geral">
             <legend>Qual País?</legend>
             
             <label for="q1a">
@@ -58,7 +58,8 @@
                 <input type="radio" id="q3a" name="pergunta3" value=""> 
             </label><br>
             
-            <label for="q3b">"> 
+            <label for="q3b">
+                <input type="radio" id="q3b" name="pergunta3" value=""> 
             </label><br>
             
             <label for="q3c">
