--- a/templates/aluno_teste_geral.html
+++ b/templates/aluno_teste_geral.html
@@ -9,7 +9,7 @@
     <h1>QuizRush Teste seu Conheciomento</h1>
 
 <fieldset>
-    <form action="alquiz_geral">
+    <form action="teste_quiz/geral">
             <legend>Qual País?</legend>
             
             <label for="q1a">
