--- a/templates/admin_usuarios.html
+++ b/templates/admin_usuarios.html
@@ -11,7 +11,7 @@
 
 
 <h3>Criar Novo Usuário</h3>
-<form action="/admin_usuario" method="POST">
+<form action="/admin/usuarios" method="POST">
     <label>Nome:</label>
     <input type="text" name="nomeUsuario" required><br>
     <label>Login:</label>
@@ -26,7 +26,7 @@
 
 <h3>Excluir Usuário</h3>
 
-<form action="/remover_ususario" method="POST">
+<form action="/admin/ususarios" method="POST">
     <label>Email:</label>
     <input type="text" name="emailUsuario" required><br>
     <button type="submit">Remover Usuário</button>
