--- a/templates/aluno.html
+++ b/templates/aluno.html
@@ -10,9 +10,9 @@
     
 
 
-<a href="{{ url_for('aluno_teste_jogo') }}">Teste o seu conhecimento na área dos Games</a><br>
+<a href="{{ url_for('aluno_teste_jogo') }}">Quiz Games</a><br>
 
-<a href="{{ url_for('aluno_teste_geral') }}">Teste o seu conhecimento Geral</a><br>
+<a href="{{ url_for('aluno_teste_geral') }}">Quiz Geral</a><br>
 
 <a href="/">Volte para Página Principal</a>
 
