--- a/templates/admin_usuarios.html
+++ b/templates/admin_usuarios.html
@@ -28,7 +28,7 @@
 
 <form action="/admin/ususarios" method="POST">
     <label>Email:</label>
-    <input type="text" name="emailUsuario" required><br>
+    <input type="text" name="emailRemover" required><br>
     <button type="submit">Remover Usuário</button>
 </form><br>
 
