--- a/templates/admin_usuarios.html
+++ b/templates/admin_usuarios.html
@@ -26,7 +26,7 @@
 
 <h3>Excluir Usuário</h3>
 
-<form action="/admin/ususarios" method="POST">
+<form action="/admin/usuarios/remover" method="POST">
     <label>Email:</label>
     <input type="text" name="emailRemover" required><br>
     <button type="submit">Remover Usuário</button>
