commit corrigri admin

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,6 +13,8 @@
 
 <a href="{{ url_for('admin_turmas') }}">Gerenciar Turmas</a><br>
 
+<a href="{{ url_for('admin_sistema') }}">Verificar Painel de Controle</a><br>
+
 <a href="/">Voltar para página Principal</a>
 </body>
 </html>
