--- a/templates/aluno_resultado.html
+++ b/templates/aluno_resultado.html
@@ -9,13 +9,8 @@
     <h1>Resultado do seu Quiz</h1>
 
          <h3>Pontuação do se Teste no QuizRush</h3>
-    <p>Aluno: <strong>{{ nome }}</strong></p>
+    <h3>Sua nota foi {{ nota }} de {{ total }}</h3>
     
-    <div style="padding: 20px; border: 1px solid #ccc;">
-        <h2>Sua nota final foi:</h2>
-        <h1 style="color: blue;">{{ nota }}</h1>
-    </div>
-
 
 <a href="{{ url_for('area_aluno') }}">Area Aluno</a><br>
 <a href="/">Voltar para página Principal</a><br>
