--- a/templates/professor_resultados.html
+++ b/templates/professor_resultados.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <style>
+        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+        th, td { border: 1px solid #ddd; padding: 12px; text-align: left; }
+        th { background-color: #f4f4f4; }
+        tr:nth-child(even) { background-color: #f9f9f9; }
+    </style>
 </head>
 <body>
     <h1>Resultados Dos Alunos</h1>
+
+<h1>Relatório de Notas - RF6</h1>
+    <a href="{{ url_for('area_professor') }}">Voltar</a>
+
+    {% if resultados %}
+    <table>
+        <thead>
+            <tr>
+                <th>Email do Aluno</th>
+                <th>Nota Final</th>
+                <th>Data e Hora da Entrega</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for r in resultados %}
+            <tr>
+                <td>{{ r[0] }}</td> <td><strong>{{ r[1] }}</strong></td> <td>{{ r[2] }}</td> </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+    <p>Ainda nenhum aluno realizou o teste.</p>
+    {% endif %}
 
 <a href="{{ url_for('area_professor') }}">Area Professor</a><br>
 </body>
