--- a/templates/professor_criar_questao.html
+++ b/templates/professor_criar_questao.html
@@ -40,6 +40,6 @@
     </form>
 
     <hr>
-    <a href="{{ url_for('professor') }}">Voltar para Área do Professor</a>
+    <a href="{{ url_for('area_professor') }}">Voltar</a>
 </body>
 </html>
