--- a/templates/aluno.html
+++ b/templates/aluno.html
@@ -10,9 +10,8 @@
     
 
 
-<a href="{{ url_for('aluno_teste_jogo') }}">Quiz Games</a><br>
+<a href="{{ url_for('aluno_quiz') }}">Quiz</a><br>
 
-<a href="{{ url_for('aluno_teste_geral') }}">Quiz Geral</a><br>
 
 <a href="/">Volte para Página Principal</a>
 
