--- a/templates/admin_turmas.html
+++ b/templates/admin_turmas.html
@@ -9,5 +9,6 @@
     <h1>Administrador - Gestão de Turmas</h1>
 
 <a href="{{ url_for('area_admin') }}">Aréa Admin</a><br>
+<a href="{{ url_for('area_admin') }}">Aréa Admin</a><br>
 </body>
 </html>
