--- a/templates/aluno_resultado.html
+++ b/templates/aluno_resultado.html
@@ -6,14 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Resultado do seu Quiz</h1>
 
-         <h3>Pontuação do se Teste no QuizRush</h3>
-    <h3>Sua nota foi {{ nota }} de {{ total }}</h3>
-    
+<div class="container">
+    <h1>Fim do QuizRush!</h1>
+    <div class="placar" style="background-color: #28a745; color: white; padding: 40px; border-radius: 20px; margin: 20px 0;">
+        <h2 style="font-size: 1.5em;">Sua Pontuação Final:</h2>
+        <p style="font-size: 4em; font-weight: bold; margin: 0;">{{ nota }}</p>
+        <p>de um total de {{ total }} pontos</p>
+    </div>
 
-<a href="{{ url_for('area_aluno') }}">Area Aluno</a><br>
-<a href="/">Voltar para página Principal</a><br>
+    {% if nota >= 6 %}
+        <h3 style="color: #28a745;">Mandou bem!</h3>
+    {% else %}
+        <h3 style="color: #dc3545;">Precisa estudar mais um pouco!</h3>
+    {% endif %}
+
+    <br>
+    <a href="/" class="btn-verde">Voltar para o Início</a>
+</div>
+
+<a href="{{ url_for('area_aluno') }}" class="btn-verde">Area Aluno</a><br>
+
 
 </body>
 </html>
